<resources>
	<string name="app_name">Edu Chat</string>
	<string name="email">School Email</string>
	<string name="password">Password</string>
	<string name="action_settings">Settings</string>
	<string name="login_button">Login</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="heroFragment1">An easy way to communicate academically</string>
	<string name="heroFragment2">Put the text you want here</string>
	<string name="heroFragment3">Put the rest of the text here</string>
	<string name="PARSE_CONFIG_AUTO_LOGIN">shouldAutoLogin</string>
	<string name="user_profile_picture_content_description">the user\'s profile picture</string>
	<string name="logout_string">Logout</string>
	<string name="enter_message_hint">Type a Message Here</string>
	<string name="ChatsUnreadString">CHATS (%d)</string>
	<string name="none_joined_yet">None joined yet…</string>
	<string name="browse">Browse</string>
	<string name="typing">Typing</string>
	<string name="send">Send</string>
	<string name="login">LOGIN</string>
	<string name="classes">CLASSES</string>
	<string name="groups">GROUPS</string>
	<string name="departments">DEPARTMENTS</string>
	<string name="people">PEOPLE</string>
	<string name="labs">LABS</string>

</resources>
