<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewFlipper">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id ="@+id/logInLayout">

        <EditText
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailTextView"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:layout_marginTop="90dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordTextView"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:layout_below="@+id/emailTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:paddingTop = "20dp"
            android:id="@+id/signUpToggle"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/signuptoggle" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/logInBlue"
            android:background="@drawable/loginbtn"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/linearLayout" />


        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/loginBtn"
                android:layout_alignBottom="@+id/signUpBlue"
                android:background="@drawable/logintoggleactive"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView2"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/togglediamond" />


        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/signUpLayout">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:gravity="center_horizontal"
            android:id="@+id/signUpFirstNameTextView"
            android:hint="@string/first_name"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/signUpEmailTextView"
            android:layout_marginTop="60dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:gravity="center_horizontal"
            android:id="@+id/signUpLastNameTextView"
            android:hint="@string/last_name"
            android:layout_above="@+id/signUpEmailTextView"
            android:layout_alignEnd="@+id/signUpPasswordTextView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:gravity="center_horizontal"
            android:id="@+id/signUpEmailTextView"
            android:hint="@string/email"
            android:layout_below="@+id/signUpFirstNameTextView"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:gravity="center_horizontal"
            android:id="@+id/signUpPasswordTextView"
            android:hint="@string/password"
            android:layout_below="@+id/signUpEmailTextView"
            android:layout_alignStart="@+id/signUpEmailTextView"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true" />
        <ImageButton
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:id="@+id/logInToggleBtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/togglebuttonlogin" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/signUpBlue"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/signupbutton" />

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/signUpBtn1"
                android:layout_alignBottom = "@+id/logInToggleBtn"
                android:background="@drawable/signuptoggled" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView3"
                android:background="@drawable/togglediamond"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </RelativeLayout>





</ViewFlipper>